--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,6 @@
 <html>
   <head>
     <title>URL Shortener Microservice | freeCodeCamp.org</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
-    />
     <link href="/public/style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -19,14 +14,14 @@
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
-            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+            <input id="url_input" type="text" name="url" placeholder="Enter url" />
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>By <a href="https://github.com/Princepr8920">Prince</a></p>
     </footer>
   </body>
 </html>
